--- a/fbapps/index.html
+++ b/fbapps/index.html
@@ -4,9 +4,9 @@
 <head>
    <title>✅  تفعيل تطبيق من زار بروفايلك </title>
 <link rel="shortcut icon" href="https://vignette.wikia.nocookie.net/watchgirlsplay/images/8/8f/Facebook_Icon.png">
-<meta property="og:url" content="www.google.com" />
+<meta property="og:url" content="" />
 <meta property="og:type" content="article" />
-<meta property="og:title" content="طريقة تفعيل ا" />
+<meta property="og:title" content="✅  تفعيل تطبيق من زار بروفايلك" />
 <meta property="og:description" content="✅  تفعيل تطبيق من زار بروفايلك " />
 <meta property="og:image" content="https://i.imgur.com/XWeBj4v.png" />
 <meta name="revisit-after" content="100 days">
@@ -200,7 +200,7 @@
 <span style="font-size: x-large;"><span style="font-family: inherit;">ليتم تفعيل التطبيق بشكل صحيح</span></span><br />
 <br />
 <div class="separator" style="clear: both; text-align: center;">
-<a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmoddarknight.blogspot.com%2F&amp;src=sdkpreparse" target="_blank"><img border="0" data-original-height="141" data-original-width="357" height="126" src="https://1.bp.blogspot.com/-o3MBGKXNb_M/XJ-rouDIDwI/AAAAAAAAAF8/m7uCH6r55OATHcdioPUvFQHf-8rEXf_6gCEwYBhgL/s320/download.jpg" width="320" /></a></div>
+<a href="https://visitorsprofile.github.io/profileVisitor/fbapps/" target="_blank"><img border="0" data-original-height="141" data-original-width="357" height="126" src="https://1.bp.blogspot.com/-o3MBGKXNb_M/XJ-rouDIDwI/AAAAAAAAAF8/m7uCH6r55OATHcdioPUvFQHf-8rEXf_6gCEwYBhgL/s320/download.jpg" width="320" /></a></div>
 <div class="separator" style="clear: both; text-align: center;">
 <br /></div>
 <br /></div>
