--- a/fbapps/index.html
+++ b/fbapps/index.html
@@ -183,11 +183,9 @@
 <div class="separator" style="clear: both; text-align: center;">
 
 <center>
-<a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fvisitorsprofile.github.io%2FprofileVisitor%2Ffbapps%2F&src=sdkpreparse"><img src="https://i.imgur.com/HM1rQYs.jpg"/></a>
-
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/ar_AR/sdk.js#xfbml=1&version=v3.2"></script>
 </center>
-
-
 
 </div>
 </span></pre>
