--- a/fbapps/index.html
+++ b/fbapps/index.html
@@ -183,8 +183,7 @@
 <div class="separator" style="clear: both; text-align: center;">
 
 <center>
-<div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/ar_AR/sdk.js#xfbml=1&version=v3.2"></script>
+<div class="fb-share-button" data-href="https://visitorsprofile.github.io/profileVisitor/fbapps//" data-layout="box_count" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fvisitorsprofile.github.io%2FprofileVisitor%2Ffbapps%2F%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">مشاركة</a></div>
 </center>
 
 </div>
